--- a/index.html
+++ b/index.html
@@ -2,11 +2,227 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Сайт компании "Нёрдс"</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="page-body">
+    <header class="main-header">
+      <div class="container">
+        <nav class="main-navigation">
+          <a class="main-header-logo">
+            <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+          </a>
+          <ul class="site-navigation">
+            <li class="nav-item"><a href="#">Студия</a></li>
+            <li class="nav-item nav-item2"><a href="#">Клиенты</a></li>
+            <li class="nav-item nav-activ-catalog"><a href="catalog.html">Магазин</a></li>
+            <li class="nav-item"><a href="#">Контакты</a></li>
+          </ul>
+          <a class="nav-basket" href="#">Корзина</a>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <h1 class="visually-hidden">Дизайн студия Нёрдс</h1>
+      <section class="slider">
+        <h2 class="visually-hidden">
+          Преимущества
+        </h2>
+        <div class="container">
+          <div class="slider-item slider-item-active">
+            <div class="slider-item-wrapper">
+              <h3>Долго, дорого, скрупулезно.</h3>
+              <p class="text-slider">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+              <a class="button button--red slide__button" href="#">Узнать больше</a>
+            </div>
+            <div class="slider-item-img1">
+              <img src="img/nerds-index-slide1_1.png" width="760" height="431" alt="Картинка с телефонами">
+            </div>
+          </div>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+          <div class="slider-item">
+            <div class="slider-item-wrapper2">
+              <h3>Любим математику как никто другой.</h3>
+              <p class="text-slider">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+              <a class="button button--red slide__button" href="#">Узнать больше</a>
+            </div>
+            <div class="slider-item-img2">
+              <img src="img/nerds-index-slide2_1.png" width="760" height="431" alt="Картинка с компьютером">
+            </div>
+          </div>
 
+          <div class="slider-item">
+            <div class="slider-item-wrapper3">
+              <h3>Только ночь, только хардкор.</h3>
+              <p class="text-slider">Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+              <a class="button button--red slide__button" href="#">Узнать больше</a>
+            </div>
+            <div class="slider-item-img3">
+              <img src="img/nerds-index-slide3_1.png" width="760" height="431" alt="Картинка с Айпадом">
+            </div>
+
+
+          </div>
+            <div class="slider-controls">
+              <button type="button" name="slider"></button>
+              <button type="button" name="slider"></button>
+              <button type="button" name="slider"></button>
+            </div>
+        </div>
+      </section>
+
+      <div class="container">
+        <section class="services">
+          <h2 class="visually-hidden">Услуги</h2>
+          <ul class="services-list">
+            <li class="services-item">
+              <h3 class="services-title">Веб-сайты</h3>
+              <p class="services-img"><img src="img/illustration-1_1.png" width="300" height="146" alt="Красная картинка с компьютером"></p>
+              <p class="services-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <a href="#" class="services-button button-red">Заказать</a>
+            </li>
+            <li class="services-item">
+              <h3 class="services-title">Приложения</h3>
+              <p class="services-img"><img src="img/illustration-2_1.png" width="300" height="146" alt="Зеленая с телефонами"></p>
+              <p class="services-text">Покорите топ-10 приложений в AppStore и Google Play</p>
+              <a href="#" class="services-button button-green">Заказать</a>
+            </li>
+            <li class="services-item">
+              <h3 class="services-title">Презентации</h3>
+              <p class="services-img"><img src="img/illustration-3_1.png" width="300" height="146" alt="Желтая со стендом"></p>
+              <p class="services-text">Вы даже не подозреваете, насколько вы изумительны!</p>
+              <a href="#" class="services-button button-yellow">Заказать</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="features">
+          <div class="features1">
+            <h2 class="features-title"><span class="features-title-span">Мы &#8212; маленькая, но гордая</span> дизайн-студия из Краснодара.</h2>
+            <p class="text-features">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <h3 class="title-features">Выполняем заказы на разработку:</h3>
+            <ul class="features-list">
+              <li class="features-item">Веб-сайтов любой сложности</li>
+              <li class="features-item features-item2">Мобильных приложений для IOS и Android</li>
+              <li class="features-item features-item3">Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </div>
+
+          <div class="features2">
+            <img src="img/nerds-illustration_1.png" width="360" height="208" alt="Логотип Нёрдс 2">
+            <table class="progress">
+              <caption class="progress-head">С 2004 года любим точность во всем:</caption>
+              <tr class="progress-columns">
+                <th>146<sup><span class="percent">%</span></sup></th>
+                <th>100<sup><span class="percent">%</span></sup></th>
+                <th>50<sup><span class="percent">%</span></sup></th>
+              </tr>
+              <tr class="progress-lines">
+                <th>Уровень самоотдачи</th>
+                <th>Соблюдение сроков</th>
+                <th>Минимальная предоплата</th>
+              </tr>
+            </table>
+          </div>
+        </section>
+
+        <section class="partners">
+          <h2 class="visually-hidden">Ссылки на партнеров</h2>
+          <ul class="partners-logo">
+            <li class="logo logo-1"><a href="#"><img src="img/logo-1.png" width="199" height="68" alt="HTML Академия"></a></li>
+            <li class="logo logo-2"><a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Барбершоп"></a></li>
+            <li class="logo logo-3"><a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Pinc"></a></li>
+            <li class="logo logo-4"><a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Mishka"></a></li>
+          </ul>
+        </section>
+      </div>
+
+        <section>
+          <h2 class="visually-hidden">Google карта</h2>
+          <div class="container">
+            <div class="contacts">
+              <b class="contacts-title">Nёrds design studio</b>
+              <address class="contacts-address">
+                191186, Санкт-Петербург,<br>
+                ул. Б. Конюшенная, д. 19/8<br>
+                <a class="contacts-telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+              </address>
+              <a class="contacts-button" href="#">Напишите нам</a>
+            </div>
+          </div>
+          <div class="map">
+            <img src="img/map.png" width="1440" alt="Googlemaps">
+          </div>
+
+        </section>
+    </main>
+
+
+    <footer class="page-footer main-footer">
+      <div class="container">
+        <div class="page-footer">
+          <div class="page-footer1">
+            <ul class="footer-social">
+              <li class="footer-item">
+                <a class="social-button" href="#">
+                  <span class="visually-hidden">Вконтакте</span>
+                  <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g id="vk-icon">
+                    <path id="Shape" d="M16.3923 11.51C17.3497 11.201 18.5754 13.55 19.8802 14.449C20.8595 15.13 21.6096 14.983 21.6096 14.983L25.0874 14.933C25.0874 14.933 26.9049 14.821 26.0457 13.379C25.9746 13.259 25.542 12.31 23.4571 10.357C21.2771 8.314 21.5725 8.645 24.1971 5.11302C25.7964 2.96002 26.4363 1.64503 26.236 1.08503C26.0437 0.546035 24.8691 0.686034 24.8691 0.686034L20.9506 0.713034C20.5691 0.714034 20.2457 0.832034 20.0985 1.22803C20.0955 1.23203 19.4766 2.89402 18.6515 4.30702C16.908 7.29601 16.2121 7.455 15.9237 7.26801C15.2618 6.83501 15.429 5.53101 15.429 4.60402C15.429 1.70703 15.8616 0.499035 14.5818 0.187037C14.1542 0.083037 13.8418 0.0150373 12.7513 0.00503739C11.3573 -0.0159625 10.1737 0.0050374 9.50277 0.334036C9.05716 0.557035 8.71568 1.04603 8.92297 1.07403C9.18333 1.10903 9.76714 1.23403 10.0796 1.66003C10.4811 2.21203 10.4691 3.44902 10.4691 3.44902C10.4691 3.44902 10.6984 6.86001 9.92836 7.28301C9.39963 7.573 8.67663 6.98101 7.12147 4.26702C6.32737 2.87902 5.72754 1.34503 5.72754 1.34503C5.72754 1.34503 5.61138 1.06003 5.40109 0.904033C5.15074 0.719034 4.80025 0.660034 4.80025 0.660034L1.0811 0.684034C1.0811 0.684034 0.522321 0.700034 0.317037 0.946033C0.134784 1.16403 0.302016 1.61403 0.302016 1.61403C0.302016 1.61403 3.21506 8.495 6.51363 11.961C9.53782 15.143 12.9746 14.932 12.9746 14.932H14.5317C14.5317 14.932 15.0014 14.878 15.2417 14.62C15.466 14.38 15.456 13.929 15.456 13.929C15.456 13.929 15.425 11.82 16.3923 11.51Z" fill="white"/>
+                    </g>
+                    </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a class="social-button" href="#">
+                  <span class="visually-hidden">Фейсбук</span>
+                  <svg width="13" height="22" viewBox="0 0 13 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.3847 4V0H8.37917C6.16696 0 4.37361 1.79086 4.37361 4V8H0.368042V12H4.37361V22H8.37917V12H12.3847V8H8.37917V4H12.3847Z" fill="white"/>
+                    </svg>
+                </a>
+              </li>
+              <li class="footer-item">
+                <a class="social-button" href="#">
+                  <span class="visually-hidden">Инстаграм</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#FFF" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="page-footer2">
+            <div class="appeal">
+              <b class="appeal-head">Давайте дружить, это выгодно!</b>
+              <p class="discount">Скидка 10% для друзей из социальных сетей.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <section class="appointment">
+      <fieldset>
+        <h2 class="feedback-title">Напишите нам</h2>
+        <form>
+          <div>
+            <label class="feedback-name" for="name">Ваше имя:</label>
+            <input class="feedback-name1" type="text" name="name" id="name" placeholder="Имя Фамилия">
+
+            <label class="feedback-email" for="email">Ваш email:</label>
+            <input class="form-email" type="email" name="email" id="email" placeholder="email@exampl.com">
+          </div>
+          <div class="appointment-text">
+            <label class="feedback-text" for="comment">Текст письма:</label>
+            <textarea class="form-text" name="comment-field" id="comment" rows="10" cols="30" placeholder="В свободной форме"></textarea>
+          </div>
+          <p>
+            <button class="button feedback-button" type="submit">Отправить</button>
+          </p>
+        </form>
+      </fieldset>
+    </section>
   </body>
 </html>
+
