Сетка на гридах для главной страницы

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
-          <a class="main-header-logo">
+          <a class="main-header-logo" href="index.html">
             <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
           </a>
           <ul class="site-navigation">
@@ -99,6 +99,7 @@
         </section>
 
         <section class="features">
+
           <div class="features1">
             <h2 class="features-title"><span class="features-title-span">Мы &#8212; маленькая, но гордая</span> дизайн-студия из Краснодара.</h2>
             <p class="text-features">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
@@ -110,57 +111,58 @@
             </ul>
           </div>
 
+
           <div class="features2">
             <img src="img/nerds-illustration_1.png" width="360" height="208" alt="Логотип Нёрдс 2">
             <table class="progress">
               <caption class="progress-head">С 2004 года любим точность во всем:</caption>
               <tr class="progress-columns">
-                <th>146<sup><span class="percent">%</span></sup></th>
-                <th>100<sup><span class="percent">%</span></sup></th>
-                <th>50<sup><span class="percent">%</span></sup></th>
+                <td style="width: 119px;">146<sup><span class="percent">%</span></sup></td>
+                <td style="width: 119px;">100<sup><span class="percent">%</span></sup></td>
+                <td style="width: 119px;">50<sup><span class="percent">%</span></sup></td>
               </tr>
               <tr class="progress-lines">
-                <th>Уровень самоотдачи</th>
-                <th>Соблюдение сроков</th>
-                <th>Минимальная предоплата</th>
+                <td>Уровень самоотдачи</td>
+                <td>Соблюдение сроков</td>
+                <td>Минимальная предоплата</td>
               </tr>
             </table>
           </div>
         </section>
 
+
         <section class="partners">
           <h2 class="visually-hidden">Ссылки на партнеров</h2>
           <ul class="partners-logo">
-            <li class="logo logo-1"><a href="#"><img src="img/logo-1.png" width="199" height="68" alt="HTML Академия"></a></li>
-            <li class="logo logo-2"><a href="#"><img src="img/logo-2.png" width="209" height="90" alt="Барбершоп"></a></li>
-            <li class="logo logo-3"><a href="#"><img src="img/logo-3.png" width="185" height="52" alt="Pinc"></a></li>
-            <li class="logo logo-4"><a href="#"><img src="img/logo-4.png" width="173" height="84" alt="Mishka"></a></li>
+            <li class="logo"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.png" width="199" height="68" alt="HTML Академия"></a></li>
+            <li class="logo"><a href="#"><img src="img/logo-barbershop.png" width="209" height="90" alt="Барбершоп"></a></li>
+            <li class="logo"><a href="#"><img src="img/logo-pinc.png" width="185" height="52" alt="Pinc"></a></li>
+            <li class="logo"><a href="#"><img src="img/logo-mishka.png" width="173" height="84" alt="Mishka"></a></li>
           </ul>
         </section>
       </div>
 
-        <section>
-          <h2 class="visually-hidden">Google карта</h2>
-          <div class="container">
-            <div class="contacts">
-              <b class="contacts-title">Nёrds design studio</b>
-              <address class="contacts-address">
-                191186, Санкт-Петербург,<br>
-                ул. Б. Конюшенная, д. 19/8<br>
-                <a class="contacts-telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
-              </address>
-              <a class="contacts-button" href="#">Напишите нам</a>
-            </div>
+      <section class="contacts-map">
+        <h2 class="visually-hidden">Google карта</h2>
+        <div class="container">
+          <div class="contacts">
+            <b class="contacts-title">Nёrds design studio</b>
+            <address class="contacts-address">
+              191186, Санкт-Петербург,<br>
+              ул. Б. Конюшенная, д. 19/8<br>
+              <a class="contacts-telephone" href="tel:+78122757575">тел. +7 (812) 275-75-75</a>
+            </address>
+            <a class="contacts-button" href="#">Напишите нам</a>
           </div>
-          <div class="map">
-            <img src="img/map.png" width="1440" alt="Googlemaps">
-          </div>
-
-        </section>
+        </div>
+        <div>
+          <img src="img/map.png" width="1440" alt="Googlemaps">
+        </div>
+      </section>
     </main>
 
 
-    <footer class="page-footer main-footer">
+    <footer class="main-footer">
       <div class="container">
         <div class="page-footer">
           <div class="page-footer1">
