--- a/catalog.html
+++ b/catalog.html
@@ -7,23 +7,21 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body class="catalog">
+  <body class="page-body">
     <header class="main-header">
       <div class="container">
-        <div class="box">
-          <nav class="main-navigation">
-            <a class="main-header-logo" href="index.html">
-              <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
-            </a>
-            <ul class="site-navigation">
-              <li class="nav-item"><a href="#">Студия</a></li>
-              <li class="nav-item"><a href="#">Клиенты</a></li>
-              <li class="nav-item"><a href="catalog.html">Магазин</a></li>
-              <li class="nav-item"><a href="#">Контакты</a></li>
-            </ul>
-            <a class="nav-basket" href="#">Корзина</a>
-          </nav>
-        </div>
+        <nav class="main-navigation">
+          <a class="main-header-logo" href="index.html">
+            <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+          </a>
+          <ul class="site-navigation">
+            <li class="nav-item"><a href="#">Студия</a></li>
+            <li class="nav-item nav-item2"><a href="#">Клиенты</a></li>
+            <li class="nav-item nav-activ-catalog"><a href="catalog.html">Магазин</a></li>
+            <li class="nav-item"><a href="#">Контакты</a></li>
+          </ul>
+          <a class="nav-basket" href="#">Корзина</a>
+        </nav>
       </div>
     </header>
     <main>
