Сетка на гридах для главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Сайт компании "Нёрдс"</title>
@@ -7,7 +7,9 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body class="page-body">
+
+  <body>
+
     <header class="main-header">
       <div class="container">
         <nav class="main-navigation">
@@ -24,13 +26,19 @@
         </nav>
       </div>
     </header>
-    <main>
+
+
+    <main class="page-catalog">
+
       <h1 class="major-heading">Магазин готовых шаблонов</h1>
+
       <div class="container">
         <div class="table1">
           <section class="table">
             <h2 class="visually-hidden">Фильтр выбора шаблона</h2>
             <form method="get" action="https://echo.htmlacademy.ru">
+
+
               <fieldset class="cost">
                 <legend class="cost-title">Стоимость:</legend>
                 <div class="rang-filters">
@@ -199,6 +207,7 @@
 
 
       <section>
+        <h2 class="visually-hidden">Google карта</h2>
         <div class="container">
           <div class="contacts">
             <b class="contacts-title">Nёrds design studio</b>
