--- a/index.html
+++ b/index.html
@@ -82,66 +82,66 @@
 
       <div class="container">
 
-        <div class="index-grids">
 
-          <section class="services">
 
-            <h2 class="visually-hidden">Услуги</h2>
+        <section class="services">
 
-            <ul class="services-list">
-              <li class="services-item services-grid1">
-                <h3 class="services-title">Веб-сайты</h3>
-                <p class="services-img"><img src="img/illustration-1_1.png" width="300" height="146" alt="Красная картинка с компьютером"></p>
-                <p class="services-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-                <a href="#" class="services-button button-red">Заказать</a>
-              </li>
-              <li class="services-item services-grid2">
-                <h3 class="services-title">Приложения</h3>
-                <p class="services-img"><img src="img/illustration-2_1.png" width="300" height="146" alt="Зеленая с телефонами"></p>
-                <p class="services-text">Покорите топ-10 приложений в AppStore и Google Play</p>
-                <a href="#" class="services-button button-green">Заказать</a>
-              </li>
-              <li class="services-item services-grid3">
-                <h3 class="services-title">Презентации</h3>
-                <p class="services-img"><img src="img/illustration-3_1.png" width="300" height="146" alt="Желтая со стендом"></p>
-                <p class="services-text">Вы даже не подозреваете, насколько вы изумительны!</p>
-                <a href="#" class="services-button button-yellow">Заказать</a>
-              </li>
+          <h2 class="visually-hidden">Услуги</h2>
+
+          <ul class="services-list">
+            <li class="services-item services-grid1">
+              <h3 class="services-title">Веб-сайты</h3>
+              <p class="services-img"><img src="img/illustration-1_1.png" width="300" height="146" alt="Красная картинка с компьютером"></p>
+              <p class="services-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <a href="#" class="services-button button-red">Заказать</a>
+            </li>
+            <li class="services-item services-grid2">
+              <h3 class="services-title">Приложения</h3>
+              <p class="services-img"><img src="img/illustration-2_1.png" width="300" height="146" alt="Зеленая с телефонами"></p>
+              <p class="services-text">Покорите топ-10 приложений <br>в AppStore и Google Play</p>
+              <a href="#" class="services-button button-green">Заказать</a>
+            </li>
+            <li class="services-item services-grid3">
+              <h3 class="services-title">Презентации</h3>
+              <p class="services-img"><img src="img/illustration-3_1.png" width="300" height="146" alt="Желтая со стендом"></p>
+              <p class="services-text">Вы даже не подозреваете, насколько вы изумительны!</p>
+              <a href="#" class="services-button button-yellow">Заказать</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="features">
+
+          <div class="features1">
+            <h2 class="features-title"><span class="features-title-span">Мы &#8212; маленькая, но гордая</span> дизайн-студия из Краснодара.</h2>
+            <p class="text-features">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+            <h3 class="title-features">Выполняем заказы на разработку:</h3>
+            <ul class="features-list">
+              <li class="features-item">Веб-сайтов любой сложности</li>
+              <li class="features-item features-item2">Мобильных приложений для IOS и Android</li>
+              <li class="features-item features-item3">Слайдшоу и видео для корпоративных презентаций</li>
             </ul>
-          </section>
-
-          <section class="features">
-
-            <div class="features1">
-              <h2 class="features-title"><span class="features-title-span">Мы &#8212; маленькая, но гордая</span> дизайн-студия из Краснодара.</h2>
-              <p class="text-features">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-              <h3 class="title-features">Выполняем заказы на разработку:</h3>
-              <ul class="features-list">
-                <li class="features-item">Веб-сайтов любой сложности</li>
-                <li class="features-item features-item2">Мобильных приложений для IOS и Android</li>
-                <li class="features-item features-item3">Слайдшоу и видео для корпоративных презентаций</li>
-              </ul>
-            </div>
+          </div>
 
 
-            <div class="features2">
-              <img src="img/nerds-illustration_1.png" width="360" height="208" alt="Логотип Нёрдс 2">
-              <table class="progress">
-                <caption class="progress-head">С 2004 года любим точность во всем:</caption>
-                <tr class="progress-columns">
-                  <td style="width: 119px;">146<sup><span class="percent">%</span></sup></td>
-                  <td style="width: 119px;">100<sup><span class="percent">%</span></sup></td>
-                  <td style="width: 119px;">50<sup><span class="percent">%</span></sup></td>
-                </tr>
-                <tr class="progress-lines">
-                  <td>Уровень самоотдачи</td>
-                  <td>Соблюдение сроков</td>
-                  <td>Минимальная предоплата</td>
-                </tr>
-              </table>
-            </div>
-          </section>
-        </div>
+          <div class="features2">
+            <img src="img/nerds-illustration_1.png" width="360" height="208" alt="Логотип Нёрдс 2">
+            <table class="progress">
+              <caption class="progress-head">С 2004 года любим точность во всем:</caption>
+              <tr class="progress-columns">
+                <td style="width: 119px;">146<sup><span class="percent">%</span></sup></td>
+                <td style="width: 119px;">100<sup><span class="percent">%</span></sup></td>
+                <td style="width: 119px;">50<sup><span class="percent">%</span></sup></td>
+              </tr>
+              <tr class="progress-lines">
+                <td>Уровень самоотдачи</td>
+                <td>Соблюдение сроков</td>
+                <td>Минимальная предоплата</td>
+              </tr>
+            </table>
+          </div>
+        </section>
+
 
 
         <section class="partners">
