--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
         </section>
 
         <section class="features">
+          <h2 class="visually-hidden">О нас</h2>
 
           <div class="features1">
-            <h2 class="features-title"><span class="features-title-span">Мы &#8212; маленькая, но гордая</span> дизайн-студия из Краснодара.</h2>
+            <p class="features-title"><span class="features-title-span">Мы &#8212; маленькая, но гордая</span> дизайн-студия из Краснодара.</p>
             <p class="text-features">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
             <h3 class="title-features">Выполняем заказы на разработку:</h3>
             <ul class="features-list">
@@ -168,7 +169,7 @@
             <a class="contacts-button" href="#">Напишите нам</a>
           </div>
         </div>
-        <div class="mp">
+        <div class="map">
           <img src="img/map.png" width="1440" alt="Googlemaps">
         </div>
       </section>
