Сетка на флексах для главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
           </a>
           <ul class="site-navigation">
             <li class="nav-item"><a href="#">Студия</a></li>
-            <li class="nav-item nav-item2"><a href="#">Клиенты</a></li>
+            <li class="nav-item"><a href="#">Клиенты</a></li>
             <li class="nav-item nav-activ-catalog"><a href="catalog.html">Магазин</a></li>
             <li class="nav-item"><a href="#">Контакты</a></li>
           </ul>
@@ -42,13 +42,13 @@
 
               <fieldset class="cost">
                 <legend class="cost-title">Стоимость:</legend>
-                <div class="rang-filters">
+                <div class="range-filter">
                   <div class="range-controls">
                     <div class="scale">
                       <div class="bar"></div>
                     </div>
-                    <div class="toggle toggle-min"></div>
-                    <div class="toggle toggle-max"></div>
+                    <div class="toggle toggle-min" tabindex="0"></div>
+                    <div class="toggle toggle-max" tabindex="0"></div>
                   </div>
 
                   <div class="price-controls">
@@ -115,25 +115,25 @@
           <h2 class="visually-hidden">Каталог</h2>
           <div class="sort">
             <p class="filter-sort-title">Сортировать:</p>
-            <ul class="filter2-list">
-              <li class="filter2-item">
+            <ul class="filter-sort-list">
+              <li class="filter-sort-item">
                 <a href="#">По цене</a>
               </li>
-              <li class="filter2-item">
+              <li class="filter-sort-item">
                 <a href="#">По типу</a>
               </li>
-              <li class="filter2-item">
+              <li class="filter-sort-item">
                 <a href="#">По названию</a>
               </li>
             </ul>
 
-            <ul class="filter2-dir">
-              <li class="filter2-dir-item">
+            <ul class="filter-dir">
+              <li class="filter-dir-item">
                 <a href="#">
                   <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 10L0 0h11"/></svg><span class="visually-hidden">Вниз</span>
                 </a>
               </li>
-              <li class="filter2-dir-item">
+              <li class="filter-dir-item">
                 <a href="#">
                   <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#231F20" d="M5.5 0L0 10h11z"/></svg><span class="visually-hidden">Вверх</span>
                 </a>
@@ -144,43 +144,57 @@
 
           <ul class="example-list">
               <li class="example-item">
-                <a href="#"><h3>Sedona</h3>
-                  <img src="img/img-sedona.jpg" width="358" height="578" alt="Sedona">
+                <a href="#">
+                  <h3>Sedona</h3>
+                  <p>
+                    <img src="img/img-sedona.jpg" width="358" height="578" alt="Пример сайта Sedona">
+                  </p>
                 </a>
                 <p class="example-text">Информационный сайт для туристов</p>
                 <a class="butten-price" href="#">9 900 ₽</a>
               </li>
               <li class="example-item">
-                <a href="#"><h3>Pink app</h3>
-                  <img src="img/img-pink.jpg" width="358" height="578" alt="Pinc App">
+                <a href="#">
+                  <h3>Pinc App</h3>
+                  <p>
+                    <img src="img/img-pink.jpg" width="358" height="578" alt="Пример сайта Pinc App">
+                  </p>
                 </a>
                 <p class="example-text">Продуктовый лендингприложения для IOS и Android</p>
                 <a class="butten-price" href="#">9 900 ₽</a>
               </li>
               <li class="example-item">
-                <a href="#"><h3>Barbershop</h3>
-                  <img src="img/img-barbershop.jpg" width="358" height="578" alt="Borodinski">
+                <a href="#">
+                  <h3>Barbershop</h3>
+                  <p>
+                    <img src="img/img-barbershop.jpg" width="358" height="578" alt="Пример сайта Borodinski">
+                  </p>
                 </a>
                 <p class="example-text">Сайт салона красоты. Для мужчин, да.</p>
                 <a class="butten-price" href="#">9 900 ₽</a>
               </li>
               <li class="example-item">
-                <a href="#"><h3>mishka</h3>
-                  <img src="img/img-mishka.jpg" width="358" height="578" alt="Mishka">
+                <a href="#">
+                  <h3>Mishka</h3>
+                  <p>
+                    <img src="img/img-mishka.jpg" width="358" height="578" alt="Пример сайта Mishka">
+                  </p>
                 </a>
                 <p class="example-text">Интернет-магазин вязаных игрушек.</p>
                 <a class="butten-price" href="#">9 900 ₽</a>
               </li>
               <li class="example-item">
-                <a href="#"><h3>a plus</h3>
-                  <img src="img/img-aplus.jpg" width="358" height="578" alt="A Plus">
+                <a href="#">
+                  <h3>A Plus</h3>
+                  <p><img src="img/img-aplus.jpg" width="358" height="578" alt="Пример сайта A Plus"></p>
                 </a>
                   <p class="example-text">Лендинг курсов повышения квалификации</p>
                   <a class="butten-price" href="#">9 900 ₽</a>
               </li>
               <li class="example-item">
-                <a href="#"><h3>Кваст</h3>
-                  <img src="img/img-kvast.jpg" width="358" height="578" alt="Кваст">
+                <a href="#">
+                  <h3>Кваст</h3>
+                  <p><img src="img/img-kvast.jpg" width="358" height="578" alt="Кваст"></p>
                 </a>
                   <p class="example-text">Промо-сайт производителя крафтового кваса</p>
                   <a class="butten-price" href="#">9 900 ₽</a>
@@ -230,7 +244,7 @@
     <footer class="page-footer main-footer">
       <div class="container">
         <div class="page-footer">
-          <div class="page-footer1">
+          <div class="page-footer-social">
             <ul class="footer-social">
               <li class="footer-item">
                 <a class="social-button" href="#">
@@ -259,7 +273,7 @@
             </ul>
           </div>
 
-          <div class="page-footer2">
+          <div class="page-footer-appeal">
             <div class="appeal">
               <b class="appeal-head">Давайте дружить, это выгодно!</b>
               <p class="discount">Скидка 10% для друзей из социальных сетей.</p>
@@ -270,12 +284,12 @@
     </footer>
 
     <section class="appointment">
-      <fieldset>
+      <fieldset class="appointment-page">
         <h2 class="feedback-title">Напишите нам</h2>
         <form>
           <div>
-            <label class="feedback-name" for="name">Ваше имя:</label>
-            <input class="feedback-name1" type="text" name="name" id="name" placeholder="Имя Фамилия">
+            <label class="feedback-name-" for="name">Ваше имя:</label>
+            <input class="name-surname" type="text" name="name" id="name" placeholder="Имя Фамилия">
 
             <label class="feedback-email" for="email">Ваш email:</label>
             <input class="form-email" type="email" name="email" id="email" placeholder="email@exampl.com">
