--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           </a>
           <ul class="site-navigation">
             <li class="nav-item"><a href="#">Студия</a></li>
-            <li class="nav-item nav-item2"><a href="#">Клиенты</a></li>
+            <li class="nav-item"><a href="#">Клиенты</a></li>
             <li class="nav-item nav-activ-catalog"><a href="catalog.html">Магазин</a></li>
             <li class="nav-item"><a href="#">Контакты</a></li>
           </ul>
@@ -43,7 +43,7 @@
               <p class="text-slider">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
               <a class="button button--red slide__button" href="#">Узнать больше</a>
             </div>
-            <div class="slider-item-img1">
+            <div class="slider-item-one">
               <img src="img/nerds-index-slide1_1.png" width="760" height="431" alt="Картинка с телефонами">
             </div>
           </div>
@@ -54,7 +54,7 @@
               <p class="text-slider">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
               <a class="button button--red slide__button" href="#">Узнать больше</a>
             </div>
-            <div class="slider-item-img2">
+            <div class="slider-item-two">
               <img src="img/nerds-index-slide2_1.png" width="760" height="431" alt="Картинка с компьютером">
             </div>
           </div>
@@ -65,7 +65,7 @@
               <p class="text-slider">Работать днём, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
               <a class="button button--red slide__button" href="#">Узнать больше</a>
             </div>
-            <div class="slider-item-img3">
+            <div class="slider-item-three">
               <img src="img/nerds-index-slide3_1.png" width="760" height="431" alt="Картинка с Айпадом">
             </div>
 
@@ -89,19 +89,19 @@
           <h2 class="visually-hidden">Услуги</h2>
 
           <ul class="services-list">
-            <li class="services-item services-grid1">
+            <li class="services-item">
               <h3 class="services-title">Веб-сайты</h3>
               <p class="services-img"><img src="img/illustration-1_1.png" width="300" height="146" alt="Красная картинка с компьютером"></p>
               <p class="services-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               <a href="#" class="services-button button-red">Заказать</a>
             </li>
-            <li class="services-item services-grid2">
+            <li class="services-item">
               <h3 class="services-title">Приложения</h3>
               <p class="services-img"><img src="img/illustration-2_1.png" width="300" height="146" alt="Зеленая с телефонами"></p>
               <p class="services-text">Покорите топ-10 приложений <br>в AppStore и Google Play</p>
               <a href="#" class="services-button button-green">Заказать</a>
             </li>
-            <li class="services-item services-grid3">
+            <li class="services-item">
               <h3 class="services-title">Презентации</h3>
               <p class="services-img"><img src="img/illustration-3_1.png" width="300" height="146" alt="Желтая со стендом"></p>
               <p class="services-text">Вы даже не подозреваете, насколько вы изумительны!</p>
@@ -113,7 +113,7 @@
         <section class="features">
           <h2 class="visually-hidden">О нас</h2>
 
-          <div class="features1">
+          <div class="about-us">
             <p class="features-title"><span class="features-title-span">Мы &#8212; маленькая, но гордая</span> дизайн-студия из Краснодара.</p>
             <p class="text-features">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
             <h3 class="title-features">Выполняем заказы на разработку:</h3>
@@ -125,14 +125,14 @@
           </div>
 
 
-          <div class="features2">
+          <div class="progress-page">
             <img src="img/nerds-illustration_1.png" width="360" height="208" alt="Логотип Нёрдс 2">
             <table class="progress">
               <caption class="progress-head">С 2004 года любим точность во всем:</caption>
               <tr class="progress-columns">
-                <td style="width: 119px;">146<sup><span class="percent">%</span></sup></td>
-                <td style="width: 119px;">100<sup><span class="percent">%</span></sup></td>
-                <td style="width: 119px;">50<sup><span class="percent">%</span></sup></td>
+                <td>146<sup><span class="percent">%</span></sup></td>
+                <td>100<sup><span class="percent">%</span></sup></td>
+                <td>50<sup><span class="percent">%</span></sup></td>
               </tr>
               <tr class="progress-lines">
                 <td>Уровень самоотдачи</td>
@@ -209,7 +209,7 @@
             </ul>
           </div>
 
-          <div class="page-footer2">
+          <div">
             <div class="appeal">
               <b class="appeal-head">Давайте дружить, это выгодно!</b>
               <p class="discount">Скидка 10% для друзей из социальных сетей.</p>
