Сетка на флексах для главной страницы
Без ошибок.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Сайт компании "Нёрдс"</title>
@@ -114,7 +114,7 @@
           <h2 class="visually-hidden">О нас</h2>
 
           <div class="about-us">
-            <p class="features-title"><span class="features-title-span">Мы &#8212; маленькая, но гордая</span> дизайн-студия из Краснодара.</p>
+            <p class="features-title"><span class="features-title-span">Мы &mdash; маленькая, но гордая</span> дизайн-студия из Краснодара.</p>
             <p class="text-features">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
             <h3 class="title-features">Выполняем заказы на разработку:</h3>
             <ul class="features-list">
@@ -209,7 +209,7 @@
             </ul>
           </div>
 
-          <div">
+          <div>
             <div class="appeal">
               <b class="appeal-head">Давайте дружить, это выгодно!</b>
               <p class="discount">Скидка 10% для друзей из социальных сетей.</p>
@@ -243,4 +243,3 @@
     </section>
   </body>
 </html>
-
